<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">SpaceCurl</string>
    <string name="tab_app_name">Tabs</string>

    <string name="zalecenia_tytul">Zalecenia</string>
    <string name="zalecenia">Tutaj bedziemy wpisywac zalecenia dot. cwiczen wzmacniajacych, 
        ograniczen ruchowych oraz innych rzeczy, ktore pacjent powinien zapamietac.</string>    
    
    <string name="nalezy_h">Należy:</string>
    <string name="nalezy">Tutaj bedziemy wpisywac zalecenia dot. cwiczen wzmacniajacych, i rzeczy, które ogólnie pomagają</string>  
    
    <string name="uwagi_h">Nie należy:</string>
    <string name="uwagi">A tutaj na temat ograniczen ruchowych oraz innych rzeczy, ktore pacjent powinien zapamietac.</string>
        
    <string name="label2">Analiza</string>
    <string name="label3">Zalecenia</string>

    
    
    
    <string-array name="tabs_titles">
		<item>Dane</item>
		<item>Statyczny (Otwarte)</item>
		<item>Statyczny (Zamknięte)</item>
        <item>Płaszczyzny</item>
        <item>Zalecenia</item>
        <item>Zalecenia2</item>
        
        <item>Zalecenia</item>
        <item>Zalecenia2</item>
    </string-array>
    
</resources>